--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"
   ></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
